--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
         <title>{% block title %}Youtube Data Analysis{% endblock %}</title>
     </head>
     <body>
-    {% block body %}{% endblock %}
+        <div id="main-container">
+            {% block body %}{% endblock %}
+        </div>
     </body>
 </html>
