--- a/templates/new_project.html
+++ b/templates/new_project.html
@@ -1,32 +1,22 @@
 {% extends "base.html" %}
 
-{% block favicon_stylesheet %}
-    {{ super() }}
-{% endblock %}
 {% block title %}Project setup{% endblock %}
 
 {% block body %}
     <div id="setup-project-container">
-        <div id="setup-project-form-container">
             <form id="setup-project-form"
-                  action="{{ url_for("setup_project_form") }}" method="post">
+                  action="{{ url_for("setup_project_form") }}" method="POST">
                 <span>
-                    <label>Project directory</label>
-                    <input id="project-dir-input" name="project-dir" placeholder="Project path"
-                           pattern="{{ path_pattern }}" required>
+                    <label for="project-dir-input">Project directory</label>
+                    <input id="project-dir-input" name="project-dir" required>
                 </span>
                 <span>
                     <label for="api-key-input">Google API key</label>
-                        <input id="api-key-input" type="password" name="api-key" placeholder="API key" required>
-                </span>
-                <span>
-                    <label> Takeout file(s)</label>
-                    <input id="takeout-dir-input" name="takeout-dir" placeholder="Takeout path"
-                           pattern="{{ path_pattern }}" required>
+                        <input id="api-key-input" type="password" name="api-key" required>
                 </span>
                 <input id="new-project-submit-button" class="button" type="submit" value="Create project">
             </form>
-        </div>
-    {% include "help.html" %}
+            {% include "flash_messages.html" %}
+    {% include "setup_project_help.html" %}
     </div>
 {% endblock %}
