--- a/templates/takeout_help.html
+++ b/templates/takeout_help.html
@@ -52,15 +52,14 @@
     <div class="help-item">
         <h3>Takeout quirks and need-to-know</h3>
         <p>
-            Takeout works strangely (badly). The three times I've used it, it
-            returned varying numbers of records, the second time returning fewer than the first and the last
-            returning more than the first two, including records older than the ones in the first two as well as
-            records sprinkled throughout the whole watch history that too were missing from the first two
-            Takeouts. The oldest records were from the start of 2014, with the Youtube account being created and
-            first used sometime in 2011.
+            Takeout works strangely (badly). The three times I've used it, varying numbers of records were returned,
+            the second time returning fewer than the first and the last returning more than the first two, including
+            records older than the ones in the first two as well as records sprinkled throughout the whole watch
+            history that too were missing from the first two Takeouts. The oldest records were from the start of 2014,
+            with the Youtube account being created and first used sometime in 2011.
         </p>
-        It does not seem to return a full watch history in any case, when compared to the
-        History page on Youtube, though the difference is not drastic.
+        It does not seem to return a full watch history in any case, when compared to the History page on Youtube,
+        though the difference is not drastic.
         <p>
         </p>
         <p>
