--- a/templates/setup_project_help.html
+++ b/templates/setup_project_help.html
@@ -1,7 +1,7 @@
 <div id="help-container">
     <div class="help-item">
-        <h3>Project directory</h3>
-        <p>Where all the data will be stored.</p>
+        <h3>Directory path</h3>
+        <p>The directory in which all the data will be stored.</p>
     </div>
 
     <div class="help-item">
