Remove periods from all buttons (looks better?)

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,10 +15,10 @@
         {% if db %}
             <div id="takeout-buttons">
                 <span>
-                    <button id="takeout-setup-button" class="button">Additional Takeout...</button>
+                    <button id="takeout-setup-button" class="button">Add more Takeout</button>
                     <button id="update-records-button" class="button">Update existing records</button>
                 </span>
-                <button id="new-project-button" class="button">New project...</button>
+                <button id="new-project-button" class="button">New project</button>
             </div>
         {% endif %}
         <div id="takeout-setup" class="hidden">
