--- a/templates/new_project.html
+++ b/templates/new_project.html
@@ -11,8 +11,8 @@
     <h1>Set up a project</h1>
     <div>
         <div id="project-buttons">
-            <button id="setup-project-button" class="button">New...</button>
-            <button id="switch-project-button" class="button">Switch to...</button>
+            <button id="setup-project-button" class="button">New</button>
+            <button id="switch-project-button" class="button">Switch to</button>
         </div>
     </div>
     {% include "flash_messages.html" %}
