Move js files and certain templates into appropriate subdirectories for better structure

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
         <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}">
-        <script src="{{ url_for('static', filename='helpers.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/helpers.js') }}"></script>
         <title>{% block title %}Youtube Data Analysis{% endblock %}</title>
     </head>
     <body>
