--- a/templates/new_project.html
+++ b/templates/new_project.html
@@ -35,7 +35,7 @@
                 </span>
                 <input id="new-project-submit-button" class="button" type="submit" value="Create">
             </form>
-        {% include "setup_project_help.html" %}
+        {% include "help/setup_project_help.html" %}
     </div>
-    <script src="{{ url_for('static', filename='create_project.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/create_project.js') }}"></script>
 {% endblock %}
