- Improve stopping a db populating/updating process:   1. Refactor closing db populating/updating process thread code into a   function (server-side)   2. Browser will now wait for a confirmation of the processing getting   stopped before re-enabling the Add Takeout and Stop buttons   3. Refactor checking if the thread is alive into a function
 - Remove an unnecessary argument from a cleanUpAfterTakeoutInsertion
 call in manage_takeout.js

 - Remove unnecessary CSS declarations for font color for buttons

 - in manage_records/views.py, move most imports out of functions into
 the global namespace to get rid of duplicate import statements

 - Change web page titles for readability/clarity

 - Minor logging string change in insert_videos, update_videos
 (add a newline)

--- a/static/main.css
+++ b/static/main.css
@@ -149,19 +149,17 @@ input:not([type=submit]) {
 }
 
 .button-cancel {
-    color: black;
     background-color: white;
     border: 1px solid tomato;
 }
 
 .button {
-    color: black;
     border: 1px solid dodgerblue;
     background-color: white;
 }
 
-.button:disabled {
-    color: black;
+.button:disabled, .button-cancel:disabled {
+    border: 1px solid gray;
     background-color: lightgray;
 }
 
