--- a/templates/new_project.html
+++ b/templates/new_project.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Project setup{% endblock %}
+{% block title %}YT Data Analysis - Setup{% endblock %}
 
 {% block body %}
     {% if path %}
