--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
         <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}">
         <script src="{{ url_for('static', filename='js/helpers.js') }}"></script>
-        <title>{% block title %}Youtube Data Analysis{% endblock %}</title>
+        <title>{% block title %}YT Data Analysis{% endblock %}</title>
     </head>
     <body>
         <div id="main-container">
