--- a/templates/index.html
+++ b/templates/index.html
@@ -12,17 +12,16 @@
     </div>
 
     <div id="takeout-section" data-full="{{ 'True' if db else '' }}">
-        {% if db %}
+        <div id="buttons">
             <div id="takeout-buttons">
-                <span>
                     <button id="takeout-setup-button" class="button">Add more Takeout</button>
-                    <button id="update-records-button" class="button">Update existing records</button>
+                    <button id="update-records-button" class="button" {{ 'disabled' if not db else '' }}>
+                        Update existing records</button>
                     <button id="takeout-cancel-button" class="button-cancel hidden">Stop</button>
-                </span>
-                <button id="new-project-button" class="button">New project</button>
             </div>
-        {% endif %}
-        <div id="takeout-setup" class="hidden">
+            <button id="new-project-button" class="button">New project</button>
+        </div>
+        <div id="takeout-setup" class="{{ 'hidden' if db else '' }}">
             <form id="takeout-form" class="single-field-form-inputs"
                   action="{{ url_for('records.populate_db_form') }}" method="POST">
                 <input id="takeout-input" name="takeout-dir" placeholder="Takeout path" required>
